--- a/.devops/pipelines/azure/image.yml
+++ b/.devops/pipelines/azure/image.yml
@@ -1,33 +1,31 @@
-parameters:
-- name: azureEnvironment
-  displayName: Azure Environment
+- name: devops_pool
   type: string
-  values:
-  - Anton
-  - Patrick
-  - Ryan
-  - Tom
-  - Eltjo
-- name: azureWorkspace
-  displayName: Workspace
+  
+- name: azure_client_id
   type: string
-  values:
-  - Cards
-  - Flowers
+
+- name: azure_client_secret
+  type: string
+
+- name: azure_subscription_id
+  type: string
+
+- name: azure_tenant_id
+  type: string
+
+- name: environment
+  type: string
 
 stages:
   - stage: ImageBuilder
     displayName: "Building Images"
     
-    variables:
-    - group: ${{ parameters.azureEnvironment }}
-
     jobs:
       - job: Build
         workspace:
           clean: all
 
-        pool: ${{ parameters.azureEnvironment }}-${{ lower(parameters.azureWorkspace) }}
+        pool: ${{ parameters.devops_pool }}
 
         steps:
         - script: |
@@ -45,11 +43,11 @@ stages:
             targetType: 'inline'
             script: |
               $packerVariable = @()
-              $packerVariable += "azure_client_id=`"$(azure_client_id)`""
-              $packerVariable += "azure_client_secret=`"$(azure_client_secret)`""
-              $packerVariable += "azure_subscription_id=`"$(azure_subscription_id)`""
-              $packerVariable += "azure_tenant_id=`"$(azure_tenant_id)`""
-              $packerVariable += "environment=`"${{ lower(parameters.azureWorkspace) }}`""
+              $packerVariable += "azure_client_id=`"${{ parameters.azure_client_id }}`""
+              $packerVariable += "azure_client_secret=`"${{ parameters.azure_client_secret }}`""
+              $packerVariable += "azure_subscription_id=`"${{ parameters.azure_subscription_id }}`""
+              $packerVariable += "azure_tenant_id=`"${{ parameters.azure_tenant_id }}`""
+              $packerVariable += "environment=`"${{ lower(parameters.environment) }}`""
               $packerVariable += "BuildSourcesDirectory=`"$(Build.SourcesDirectory)`""
               Set-Content -Value $packerVariable -Path azure.pkrvars.hcl -Force
             workingDirectory: '$(Build.Repository.LocalPath)/packer/azure'
