--- a/.devops/pipelines/azure/image.yml
+++ b/.devops/pipelines/azure/image.yml
@@ -17,8 +17,13 @@ parameters:
 - name: environment
   type: string
 
+- name: depends_on
+  type: string
+  default: []
+
 jobs:
   - job: BuildImage
+    dependsOn: ${{ parameters.depends_on }}
     workspace:
       clean: all
 
