--- a/.devops/pipelines/azure/infra.yml
+++ b/.devops/pipelines/azure/infra.yml
@@ -34,6 +34,8 @@ parameters:
 
 jobs:
   - job: buildInfra
+    displayName: Building infrastructure
+    
     steps:
     - task: TerraformInstaller@0
       displayName: Terraform download
