--- a/ansible/roles/citrix-cloud-configuration/tasks/hosting_connection.yml
+++ b/ansible/roles/citrix-cloud-configuration/tasks/hosting_connection.yml
@@ -1,6 +1,6 @@
 - name: Built the environment dictonary and variables
   set_fact:
-    environment_short: "{{ lookup('env', 'branch') }}"
+    environment_short: "{{ lookup('env', 'branch') | lower }}"
     prefix: "{{ lookup('env', 'prefix') }}"
     citrix_org_id: "{{ lookup('env', 'citrix_org_id') }}"
     citrix_client_id: "{{ lookup('env', 'citrix_client_id') }}"
