--- a/ansible/roles/citrix-cloud-connector/tasks/main.yml
+++ b/ansible/roles/citrix-cloud-connector/tasks/main.yml
@@ -1,16 +1,15 @@
-# - name: Disable IE Enhanced Security Configuration - Admin
-#   win_regedit:
-#     path: "HKLM:\SOFTWARE\Microsoft\Active Setup\Installed Components{A509B1A7-37EF-4b3f-8CFC-4F3A74704073}"
-#     name: IsInstalled
-#     data: 0
-#     type: dword
+- name: Built the environment dictonary and variables
+  set_fact:
+    branch: "{{ lookup('env', 'branch') | lower }}"
+    prefix: "{{ lookup('env', 'prefix') }}"
+    branches:
+        default: "pois" 
+        cards:   "card"
+        flowers: "flow"
 
-# - name: Disable IE Enhanced Security Configuration - User
-#   win_regedit:
-#     path: "HKLM:\SOFTWARE\Microsoft\Active Setup\Installed Components{A509B1A8-37EF-4b3f-8CFC-4F3A74704073}"
-#     name: IsInstalled
-#     data: 0
-#     type: dword
+- name: Set the environment short
+  set_fact:
+    environment_short: "{{branches[branch | lower]}}"
 
 - name: Create directory structure
   win_file:
@@ -51,7 +50,7 @@
     citrix_resource_id: "{{ data | to_json | from_json | json_query(querystr) }}"
   vars:
     data: "{{ citrix_resource['json'] | lower }}"
-    querystr: "items[?contains(name,'{{ prefix }}-{{ branch }}')].id | [0]"
+    querystr: "items[?contains(name,'{{ prefix | lower }}-{{ environment_short }}-{{ deploymentname | lower }}-azure')].id | [0]"
 
 - name: Create new resource location when location does not exists
   win_uri:
@@ -59,7 +58,7 @@
     method: POST
     headers: "{'Authorization': 'CWSAuth bearer={{citrix_token.json.access_token}}'}"
     content_type: application/json
-    body: "{'name': '{{ prefix }}-{{ branch }}', 'internalOnly': false, 'timeZone': 'GMT Standard Time', 'readOnly': false}"
+    body: "{'name': '{{ prefix | lower }}-{{ environment_short }}-{{ deploymentname | lower }}-azure', 'internalOnly': false, 'timeZone': 'GMT Standard Time', 'readOnly': false}"
     return_content: yes
   register: citrix_new_resource
   when: citrix_resource_id != None
