--- a/.devops/pipelines/azure-install.yml
+++ b/.devops/pipelines/azure-install.yml
@@ -58,8 +58,8 @@ stages:
       azure_tenant_id: $(azure_tenant_id)
       environment: ${{ parameters.azureWorkspace }}
 
-- stage: ansible_deploy
-  displayName: Ansible deployment
+- stage: ansible_domain
+  displayName: Ansible domain deployment
   
   pool: ${{ parameters.azureEnvironment }}-${{ lower(parameters.azureWorkspace) }}
   
@@ -68,6 +68,59 @@ stages:
   jobs:
   - template: azure/ansible.yml
     parameters:
+      ansible_playbook: domain.yml
+      azure_build: ${{ parameters.azureBuild }}
+      azure_backend: $(azure_backend)
+      azure_client_id: $(azure_client_id)
+      azure_client_secret: $(azure_client_secret)
+      azure_subscription_id: $(azure_subscription_id)
+      azure_tenant_id: $(azure_tenant_id)
+      azure_region: ${{ parameters.azureRegion }}
+      azure_delivery: ${{ parameters.azureDelivery }}
+      azure_workspace: ${{ parameters.azureWorkspace }}
+      devops_token: $(devops_token)
+      devops_pool: ${{ parameters.azureEnvironment }}
+      citrix_client_id: $(citrix_client_id)
+      citrix_client_secret: $(citrix_client_secret)
+      citrix_org_id: $(citrix_org_id)
+
+- stage: ansible_management
+  displayName: Ansible management deployment
+  
+  pool: ${{ parameters.azureEnvironment }}-${{ lower(parameters.azureWorkspace) }}
+  
+  dependsOn: ansible_domain
+
+  jobs:
+  - template: azure/ansible.yml
+    parameters:
+      ansible_playbook: management.yml
+      azure_build: ${{ parameters.azureBuild }}
+      azure_backend: $(azure_backend)
+      azure_client_id: $(azure_client_id)
+      azure_client_secret: $(azure_client_secret)
+      azure_subscription_id: $(azure_subscription_id)
+      azure_tenant_id: $(azure_tenant_id)
+      azure_region: ${{ parameters.azureRegion }}
+      azure_delivery: ${{ parameters.azureDelivery }}
+      azure_workspace: ${{ parameters.azureWorkspace }}
+      devops_token: $(devops_token)
+      devops_pool: ${{ parameters.azureEnvironment }}
+      citrix_client_id: $(citrix_client_id)
+      citrix_client_secret: $(citrix_client_secret)
+      citrix_org_id: $(citrix_org_id)
+
+- stage: ansible_cvads
+  displayName: Ansible Citirx DaaS deployment
+  
+  pool: ${{ parameters.azureEnvironment }}-${{ lower(parameters.azureWorkspace) }}
+  
+  dependsOn: ansible_domain
+
+  jobs:
+  - template: azure/ansible.yml
+    parameters:
+      ansible_playbook: cvads.yml
       azure_build: ${{ parameters.azureBuild }}
       azure_backend: $(azure_backend)
       azure_client_id: $(azure_client_id)
