Using the build number for the image version

--- a/.devops/pipelines/azure/image.yml
+++ b/.devops/pipelines/azure/image.yml
@@ -14,6 +14,8 @@ parameters:
 - name: environment
   type: string
 
+name: $(Date:yy).$(Date:MM)$(Rev:.r)
+
 jobs:
   - job: buildImage
     displayName: Building image
@@ -40,7 +42,7 @@ jobs:
           $packerVariable += "azure_tenant_id=`"${{ parameters.azure_tenant_id }}`""
           $packerVariable += "environment=`"${{ lower(parameters.environment) }}`""
           $packerVariable += "BuildSourcesDirectory=`"$(Build.SourcesDirectory)`""
-          $packerVariable += "image_version=`"$(Date:yy).$(Date:MM)$(Rev:.r)`""
+          $packerVariable += "image_version=`"$(Build.BuildNumber)`""
           Set-Content -Value $packerVariable -Path azure.pkrvars.hcl -Force
         workingDirectory: '$(Build.Repository.LocalPath)/packer/azure'
 
