Moved the files arround to ensure the role is correct added the credentials into the pipeline using the library variables

--- a/.devops/pipelines/azure-install.yml
+++ b/.devops/pipelines/azure-install.yml
@@ -109,6 +109,8 @@ stages:
       azure_client_secret: $(azure_client_secret)
       azure_subscription_id: $(azure_subscription_id)
       azure_tenant_id: $(azure_tenant_id)
+      citrix_username: $(citrix_username)
+      citrix_username: $(citrix_password)
       environment: ${{ parameters.azureWorkspace }}
       version: $(Build.BuildNumber)
 
