Minor correction in the parameter

--- a/.devops/pipelines/azure-install.yml
+++ b/.devops/pipelines/azure-install.yml
@@ -110,7 +110,7 @@ stages:
       azure_subscription_id: $(azure_subscription_id)
       azure_tenant_id: $(azure_tenant_id)
       citrix_username: $(citrix_username)
-      citrix_username: $(citrix_password)
+      citrix_password: $(citrix_password)
       environment: ${{ parameters.azureWorkspace }}
       version: $(Build.BuildNumber)
 
