Adding the correct qoutes that will not break ansible

--- a/ansible/roles/citrix-vda/tasks/main.yml
+++ b/ansible/roles/citrix-vda/tasks/main.yml
@@ -47,7 +47,7 @@
 
 - name: Download Citrix VDA
   win_shell: C:\Download\Citrix\Get-CTXBinary.ps1
-  args: "-DownloadPath 'C:\Download\Citrix' -MyCitrixUsername {{ citrix_username }} -MyCitrixPassword {{ citrix_password }} -VDAVersion latest -VDAType workstation -CitrixEULAAccept $true"
+  args: "-DownloadPath \"C:\Download\Citrix\" -MyCitrixUsername {{ citrix_username }} -MyCitrixPassword {{ citrix_password }} -VDAVersion latest -VDAType workstation -CitrixEULAAccept $true"
   register: citrix_download
 
 - name: Debug Citrix download
